--- a/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
+++ b/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
@@ -1,1 +1,30 @@
-<p>mobile-bottom-nav works!</p>
+<div class="mobile-nav">
+  <nav>
+    <ul>
+      <li>
+        <a routerLink="/tasks" routerLinkActive="active">
+          <i class="icon-tasks"></i>
+          <span>Tasks</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/pomodoro" routerLinkActive="active">
+          <i class="icon-pomodoro"></i>
+          <span>Pomodoro</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/habits" routerLinkActive="active">
+          <i class="icon-habits"></i>
+          <span>Habits</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/settings" routerLinkActive="active">
+          <i class="icon-settings"></i>
+          <span>Settings</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
