feat: integrate tailwind & lucide angular icons

--- a/frontend/src/app/layout/navigation/desktop-sidebar/desktop-sidebar.component.html
+++ b/frontend/src/app/layout/navigation/desktop-sidebar/desktop-sidebar.component.html
@@ -6,34 +6,34 @@
       </a>
     </div>
     <button class="collapse-button" (click)="layoutService.toggleSidebarCollapsed()">
-      <!-- <lucide-icon name="panel-left-close" *ngIf="!layoutService.sidebarCollapsed()"></lucide-icon>
-      <lucide-icon name="panel-right-close" *ngIf="layoutService.sidebarCollapsed()"></lucide-icon> -->
+      <lucide-icon name="panel-left-close" *ngIf="!layoutService.sidebarCollapsed()"></lucide-icon>
+      <lucide-icon name="panel-right-close" *ngIf="layoutService.sidebarCollapsed()"></lucide-icon>
     </button>
   </div>
   <nav>
     <ul>
       <li>
         <a routerLink="/tasks" routerLinkActive="active">
-          <i class="icon-tasks"></i>
-          <span *ngIf="!(layoutService.sidebarCollapsed())">Tasks</span>
+          <i-lucide name="check"></i-lucide>
+          <span class="mb-0.5" *ngIf="!(layoutService.sidebarCollapsed())">Tasks</span>
         </a>
       </li>
       <li>
         <a routerLink="/pomodoro" routerLinkActive="active">
-          <i class="icon-pomodoro"></i>
-          <span *ngIf="!(layoutService.sidebarCollapsed())">Pomodoro</span>
+          <i-lucide name="timer"></i-lucide>
+          <span class="mb-0.5" *ngIf="!(layoutService.sidebarCollapsed())">Pomodoro</span>
         </a>
       </li>
       <li>
         <a routerLink="/habits" routerLinkActive="active">
-          <i class="icon-habits"></i>
-          <span *ngIf="!(layoutService.sidebarCollapsed())">Habits</span>
+          <i-lucide name="repeat-2"></i-lucide>
+          <span class="mb-0.5" *ngIf="!(layoutService.sidebarCollapsed())">Habits</span>
         </a>
       </li>
       <li>
         <a routerLink="/settings" routerLinkActive="active">
-          <i class="icon-settings"></i>
-          <span *ngIf="!(layoutService.sidebarCollapsed())">Settings</span>
+          <i-lucide name="settings"></i-lucide>
+          <span class="mb-0.5" *ngIf="!(layoutService.sidebarCollapsed())">Settings</span>
         </a>
       </li>
     </ul>
