--- a/frontend/src/app/layout/navigation/desktop-sidebar/desktop-sidebar.component.scss
+++ b/frontend/src/app/layout/navigation/desktop-sidebar/desktop-sidebar.component.scss
@@ -25,7 +25,6 @@
   }
 
   .logo {
-    margin-bottom: 2rem;
     a {
       display: flex;
       align-items: center;
@@ -55,7 +54,9 @@
         a {
           display: flex;
           align-items: center;
+          column-gap: 7px;
           padding: 0.75rem 1rem;
+          margin-bottom: 7px;
           border-radius: 0.5rem;
           text-decoration: none;
           color: #475569;
@@ -80,26 +81,14 @@
     }
   }
 
-  .collapse-button-container {
+  .collapse-button {
+    background: none;
+    border: none;
+  }
+
+  .sidebar-header {
     display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-
-    button {
-      background: none;
-      border: 1px solid #e2e8f0;
-      border-radius: 0.5rem;
-      padding: 0.5rem;
-      cursor: pointer;
-      transition: background-color 0.2s;
-
-      &:hover {
-        background-color: #e2e8f0;
-      }
-
-      i {
-        font-size: 1.25rem;
-      }
-    }
+    justify-content: space-between;
+    align-items: center;
   }
 }
