fix: icons in bottom nav

--- a/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
+++ b/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
@@ -3,25 +3,25 @@
     <ul>
       <li>
         <a routerLink="/tasks" routerLinkActive="active">
-          <i class="icon-tasks"></i>
+          <i-lucide name="check"></i-lucide>
           <span>Tasks</span>
         </a>
       </li>
       <li>
         <a routerLink="/pomodoro" routerLinkActive="active">
-          <i class="icon-pomodoro"></i>
+          <i-lucide name="timer"></i-lucide>
           <span>Pomodoro</span>
         </a>
       </li>
       <li>
         <a routerLink="/habits" routerLinkActive="active">
-          <i class="icon-habits"></i>
+          <i-lucide name="repeat-2"></i-lucide>
           <span>Habits</span>
         </a>
       </li>
       <li>
         <a routerLink="/settings" routerLinkActive="active">
-          <i class="icon-settings"></i>
+          <i-lucide name="settings"></i-lucide>
           <span>Settings</span>
         </a>
       </li>
