style: page names in mobile view & pomodoro page extra padding

--- a/frontend/src/app/layout/navigation/desktop-sidebar/desktop-sidebar.component.scss
+++ b/frontend/src/app/layout/navigation/desktop-sidebar/desktop-sidebar.component.scss
@@ -84,11 +84,14 @@
   .collapse-button {
     background: none;
     border: none;
+    cursor: pointer;
+   
   }
 
   .sidebar-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px
   }
 }
