--- a/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
+++ b/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
@@ -1,28 +1,24 @@
 <div class="mobile-nav">
   <nav>
     <ul>
-      <li>
+      <li title="Tasks">
         <a routerLink="/tasks" routerLinkActive="active">
           <i-lucide name="check"></i-lucide>
-          <span>Tasks</span>
-        </a>
+       </a>
       </li>
-      <li>
+      <li title="Pomodoro">
         <a routerLink="/pomodoro" routerLinkActive="active">
           <i-lucide name="timer"></i-lucide>
-          <span>Pomodoro</span>
         </a>
       </li>
-      <li>
+      <li title="Habits">
         <a routerLink="/habits" routerLinkActive="active">
           <i-lucide name="repeat-2"></i-lucide>
-          <span>Habits</span>
         </a>
       </li>
-      <li>
+      <li title="Settings">
         <a routerLink="/settings" routerLinkActive="active">
           <i-lucide name="settings"></i-lucide>
-          <span>Settings</span>
         </a>
       </li>
     </ul>
