--- a/frontend/src/app/features/pomodoro/pages/pomodoro-page/pomodoro-page.component.scss
+++ b/frontend/src/app/features/pomodoro/pages/pomodoro-page/pomodoro-page.component.scss
@@ -33,7 +33,7 @@
   padding: 0.5rem 1rem;
   border-radius: 8px;
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.2s;
   font-weight: 600;
 }
 
