--- a/frontend/src/app/features/pomodoro/pages/pomodoro-page/pomodoro-page.component.html
+++ b/frontend/src/app/features/pomodoro/pages/pomodoro-page/pomodoro-page.component.html
@@ -1,15 +1,16 @@
-<div class="pomodoro-page flex justify-center items-center p-4">
+<div class="pomodoro-page flex justify-center items-center">
   <div class="timer-card bg-white dark:bg-gray-800 rounded-2xl !shadow-lg w-full max-w-md p-8">
     <div class="timer-types flex justify-center space-x-2 mb-8">
-      <button [class.active]="(pomodoroService.type$ | async) === 'pomodoro'"
+      <button
+        [ngClass]="{'active': pomodoroService.type === 'pomodoro' }"
         (click)="pomodoroService.setType('pomodoro')" class="px-4 py-2 rounded-full text-sm font-medium">
         Pomodoro
       </button>
-      <button [class.active]="(pomodoroService.type$ | async) === 'short-break'"
+      <button [ngClass]="{'active': pomodoroService.type === 'short-break' }"
         (click)="pomodoroService.setType('short-break')" class="px-4 py-2 rounded-full text-sm font-medium">
         Short Break
       </button>
-      <button [class.active]="(pomodoroService.type$ | async) === 'long-break'"
+      <button [ngClass]="{'active': pomodoroService.type === 'long-break' }"
         (click)="pomodoroService.setType('long-break')" class="px-4 py-2 rounded-full text-sm font-medium">
         Long Break
       </button>
