--- a/frontend/src/app/features/tasks/pages/tasks-page/tasks-page.component.html
+++ b/frontend/src/app/features/tasks/pages/tasks-page/tasks-page.component.html
@@ -1,5 +1,5 @@
 <div class="tasks-page p-4">
-  <div class="task-list bg-white dark:bg-gray-800 rounded-lg shadow">
+  <div class="task-list rounded-lg">
     <div
       *ngFor="let task of tasks"
       class="task-item flex items-center p-4 border-b border-gray-200 dark:border-gray-700"
