--- a/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
+++ b/frontend/src/app/layout/navigation/mobile-bottom-nav/mobile-bottom-nav.component.html
@@ -1,9 +1,9 @@
 <div class="mobile-nav">
   <nav>
     <ul>
-      <li title="Tasks">
-        <a routerLink="/tasks" routerLinkActive="active">
-          <i-lucide name="check"></i-lucide>
+      <li title="Notes">
+        <a routerLink="/notes" routerLinkActive="active">
+          <i class="fa-solid fa-note-sticky !mr-0"></i>
        </a>
       </li>
       <li title="Pomodoro">
