fix: style for the app and add header to each page

--- a/frontend/src/app/features/pomodoro/pages/pomodoro-page/pomodoro-page.component.html
+++ b/frontend/src/app/features/pomodoro/pages/pomodoro-page/pomodoro-page.component.html
@@ -1,3 +1,6 @@
+<div>
+  <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Pomodoro</h1>
+</div>
 <div class="pomodoro-page flex justify-center items-center">
   <div class="timer-card bg-white dark:bg-gray-800 rounded-2xl !shadow-lg w-full max-w-md p-8">
     <div class="timer-types flex justify-center space-x-2 mb-8">
