--- a/frontend/src/app/features/notes/pages/notes-page/notes-page.component.html
+++ b/frontend/src/app/features/notes/pages/notes-page/notes-page.component.html
@@ -1,4 +1,4 @@
-<div class="p-8">
+<div>
   <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Notes</h1>
   <p class="mt-2 text-lg text-gray-600 dark:text-gray-400">
     This is where your notes will be displayed.
