--- a/frontend/src/app/features/settings/pages/settings-page/settings-page.component.html
+++ b/frontend/src/app/features/settings/pages/settings-page/settings-page.component.html
@@ -1,5 +1,9 @@
-<div class="pomodoro-page flex justify-center items-center p-4">
-  <div class="settings-card bg-white dark:bg-gray-800 rounded-2xl !shadow-lg w-full max-w-md">
+<div>
+  <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Settings</h1>
+  <p class="mt-2 text-lg text-gray-600 dark:text-gray-400">
+    This is where your Settings will be displayed.
+  </p>
+  <!-- <div class="settings-card bg-white dark:bg-gray-800 rounded-2xl !shadow-lg w-full max-w-md">
     <label>Appearance</label>
     <div class="theme-types flex justify-center space-x-2 mb-8">
       <button [class.active]="currentTheme === theme.Dark" (click)="setTheme(theme.Dark)"
@@ -9,5 +13,5 @@
       <button [class.active]="currentTheme === theme.System" (click)="setTheme(theme.System)"
         class="px-4 py-2 rounded-full text-sm font-medium">System</button>
     </div>
-  </div>
+  </div> -->
 </div>
