--- a/frontend/src/app/features/notes/components/markdown-preview/markdown-preview.component.html
+++ b/frontend/src/app/features/notes/components/markdown-preview/markdown-preview.component.html
@@ -1,1 +1,3 @@
-<div class="markdown-body prose dark:prose-invert max-w-none p-4"></div>
+<div class="markdown-preview-wrapper">
+    <markdown ngPreserveWhitespaces  [data]="content" [clipboard]="true" [mermaid]="true" [commandLine]="true" class="markdown-content"></markdown>
+</div>
