feat: copy code in preview

--- a/frontend/src/app/features/notes/components/markdown-preview/markdown-preview.component.scss
+++ b/frontend/src/app/features/notes/components/markdown-preview/markdown-preview.component.scss
@@ -45,4 +45,12 @@
             background-color: rgba(255, 255, 255, 0.05);
         }
     }
+
+    ::ng-deep {
+        pre[class*=language-] {
+            border: none !important;
+            box-shadow: none !important;
+            background: #223242 !important;
+        }
+    }
 }
