--- a/frontend/src/app/features/notes/components/markdown-preview/markdown-preview.component.html
+++ b/frontend/src/app/features/notes/components/markdown-preview/markdown-preview.component.html
@@ -1,3 +1,3 @@
 <div class="markdown-preview-wrapper">
-    <markdown ngPreserveWhitespaces  [data]="content" [clipboard]="true" [mermaid]="true" [commandLine]="true" class="markdown-content"></markdown>
+    <markdown ngPreserveWhitespaces clipboard [data]="content" [clipboardButtonComponent]="clipboardButton"  class="markdown-content"></markdown>
 </div>
